# growth-crew

./: .env_example  LICENSE  README.md  crew.py  growth_crew.py  linkedin_post_crew.py  output.txt
gc_project/: README.md  pyproject.toml
gc_project/src/gc_project/: crew.py  main.py
notebooks/: growth_crew_notebook.ipynb
tools/: __init__.py  reddit.py
