[tool.poetry]
name = "gc_project"
version = "0.1.0"
description = "gc_project using crewAI"
authors = ["Dr. Vktor <s@abey.one>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.41.1" }

[tool.poetry.scripts]
gc_project = "gc_project.main:run"
train = "gc_project.main:train"
replay = "gc_project.main:replay"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
